@@ -1,0 +1,1 @@
+#include "tst-once3.c"
