@@ -1,0 +1,1 @@
+#include "tst-once4.c"
